tests/single_instruction_translation_validation/mcsema/register-variants-samereg/cvtss2si_r32_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:182:24: error: use of undefined value '@my.fabs.f32'
  %9 = tail call float @my.fabs.f32(float %8) #22
                       ^
0.02user 0.02system 0:00.06elapsed 84%CPU (0avgtext+0avgdata 27292maxresident)k
0inputs+16outputs (0major+3252minor)pagefaults 0swaps
